fix audio element align

--- a/public/css/channel.css
+++ b/public/css/channel.css
@@ -68,6 +68,11 @@ a:hover, a:focus  {
   border-radius: 4px;
   box-shadow: 0px 0px 2px 1px #777777;
 }
+
+
+#messages .message .word audio {
+  vertical-align: middle;
+}
 @media only screen and (min-width: 600px) {
   #messages .message:nth-child(2n+1) {
     background : transparent;
